优化了analyser, 实现了yacc的visualizer

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <version>2.10.1</version>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>22.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.beust</groupId>
             <artifactId>jcommander</artifactId>
             <version>1.82</version>
